--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,3 @@
-/* Color Scheme
-#c9b9ad light brown
-#3d220f brown
-#7a7a64 green
-*/
-
 * {
     font-family: sans-serif;
     list-style: none;
@@ -36,14 +30,24 @@ body {
     font-size: 1.4em;
 }
 
-/* Navbar search item */
-.navSearch {
+/* Navbar items */
+.navItems {
     margin-top: 2px;
     font-size: 1.1em;
 }
 
-.navSearch a:hover {
+.navItems a:hover {
     color: #c9b9ad;
+}
+
+/* Nav search link */
+#navAdd {
+    margin-right: 15px;
+}
+
+/* Nav view link */
+#navView {
+    margin-right: 15px;
 }
 
 /* Index.ejs header */
@@ -227,47 +231,3 @@ input[type=text], select {
     background-color: #6b6b55;
     cursor: pointer;
 }
-
-/*
-Pride and Prejudice
-Jane Austen
-Romance
-1813
-English
-Advanced
-
-The Picture of Dorian Gray
-Oscar Wilde
-Fiction
-1890
-English
-Advanced
-
-Heartless
-Marissa Meyer
-Fiction
-2016
-English
-Intermediate
-
-Facts About the Moon
-Dorianne Laux
-Poetry
-2006
-English
-Intermediate
-
-Twilight
-Stephenie Meyer
-Romance
-2005
-English
-Intermediate
-
-Sample Book
-Author
-Fantasy
-2001
-English
-Beginner
-*/
