--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,9 @@
     <div class="navHead">
         <a href="/">Library Book System</a>
     </div>
-    <div class="navSearch">
+    <div class="navItems">
+        <a href="/" id="navAdd">Add</a>
+        <a href="/show" id="navView">View</a>
         <a href="/search">Search</a>
     </div>
 </div>
